# neil

./: .gitignore  GITHUB_README.md  INTERNAL_README.md  LICENSE  QUICKSTART.md  README.md  config.toml (2266 bytes)  deployment.md  install.sh  long-term-prompt.txt  release.sh  test_release.sh
approvals/: README.md
blueprint/: Cargo.toml  README.md  bench_report.py  seal_bench.sh  smoothness_bench.sh  tui_testbench.sh
blueprint/art/: README.md  curious.txt  focused.txt  happy.txt  sleeping.txt  stressed.txt  working.txt
blueprint/src/: awareness.rs  lib.rs  main.rs  panel.rs  seal.rs  state.rs  stream.rs
blueprint/src/panels/: graph.rs  header.rs  heartbeat.rs  intentions.rs  memory.rs  mod.rs  seal.rs  services.rs  status.rs  system.rs
cluster/: README.md  schema.json
docs/: SHOWCASE.md
essence/: README.md  actions.md  guardrails.md  heartbeat.md  heartbeat_reprompt.md  identity.md  lessons.md  mission.md  overview.md  philosophy.md  soul.md  wakeup.md
inputs/: README.md  watcher-manager.sh
memory/: README.md
mirror/: README.md  sync.sh
os/: ARCHITECTURE.md  CONTRACTS.md  STACKABLE.md  essence
personas/: _schema.md  cso.md  default.md  eng-mgr.md
plugins/: README.md  install.sh
python/: _neil_hooks.pth  _neil_hooks.py
self/: README.md  beat_health.sh  beat_taxonomy.sh  lessons.md  memory_decay.sh  philosophy.md  question_tracker.sh  reinforce_from_search.sh  self_check.sh  snapshot.sh  verify.sh
services/: README.md  handler.sh
specs/: level2_persona_library.md
tools/: beat_retrospective.sh  resource_logger.sh  update_seal_pose.sh
(+101 files in other folders)
