[package]
name = "neil-blueprint"
version = "0.1.0"
edition = "2024"
description = "Neil the SEAL — Living Blueprint TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
